--- a/apps/graphql-server/package.json
+++ b/apps/graphql-server/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fastify": "^4.25.2",
+    "graphql": "^16.8.1",
+    "graphql-yoga": "^5.1.1"
+  }
 }
