--- a/apps/graphql-server/package.json
+++ b/apps/graphql-server/package.json
@@ -12,6 +12,14 @@
   "dependencies": {
     "fastify": "^4.25.2",
     "graphql": "^16.8.1",
-    "graphql-yoga": "^5.1.1"
+    "graphql-yoga": "^5.1.1",
+    "pino-pretty": "^10.3.1"
+  },
+  "devDependencies": {
+    "@tsconfig/node20": "^20.1.2",
+    "@types/node": "^20.10.6",
+    "cross-env": "^7.0.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   }
 }
