--- a/apps/graphql-server/package.json
+++ b/apps/graphql-server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "build": "tsc -p .",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/index.ts",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
