plugin-with-input を追加した

--- a/apps/graphql-server/package.json
+++ b/apps/graphql-server/package.json
@@ -17,6 +17,7 @@
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.63.1",
     "@pothos/plugin-relay": "^3.45.1",
+    "@pothos/plugin-with-input": "^3.10.1",
     "@prisma/client": "5.7.1",
     "fastify": "^4.25.2",
     "graphql": "^16.8.1",
