--- a/apps/graphql-server/package.json
+++ b/apps/graphql-server/package.json
@@ -14,16 +14,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@libs/validator": "workspace:^",
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.63.1",
     "@pothos/plugin-relay": "^3.45.1",
+    "@pothos/plugin-validation": "^3.10.1",
     "@pothos/plugin-with-input": "^3.10.1",
     "@prisma/client": "5.7.1",
     "fastify": "^4.25.2",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
     "graphql-yoga": "^5.1.1",
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
